Fix layout bugs

--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,12 @@
 html * {
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  margin: 0;
+  padding: 0;
 }
 
 body {
   background-color: #212529;
   color: #fff;
-  margin: 0;
-  padding: 0;
 }
 
 a {
@@ -32,6 +32,14 @@ a {
   color: #fff;
   border: 3px solid #fff;
   display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.center {
+  display: flex;
+  flex-wrap: wrap;
+  width: 100%;
   justify-content: center;
   align-items: center;
 }
